--- a/index.html
+++ b/index.html
@@ -49,15 +49,14 @@
                     <label for="number" value="ID">ID</label>
                     <input class="form-control" type="number" name="id" id="selID" min="0" placeholder="Select ID">
                 </div>
-                <!-- <div> -->
                 <div>
                     <br>
                     <button class="btn btn-dark" type="submit" id="btnAmuse" value="Tell me a joke" onclick="requestData()">Amuse me</button>
                 </div>
             </div>
-            <!-- </div> -->
+
         </form>
-        <div id="jokes">
+        <div class="container" id="jokes">
             <!-- This is a placeholder for jokes -->
             
         </div>
